[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "url2pdf"
version = "1.2.1"
description = "Convert any web page to a searchable, text-selectable PDF"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["pdf", "web", "playwright", "converter", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Utilities",
]
dependencies = [
    "playwright>=1.40",
    "pymupdf>=1.23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
ocr = [
    "pytesseract>=0.3",
    "Pillow>=10.0",
]

[project.scripts]
url2pdf = "url2pdf.cli:main"
url2pdf-gui = "url2pdf.gui:main"

[project.urls]
Homepage = "https://github.com/a-i-am/url2pdf"
Repository = "https://github.com/a-i-am/url2pdf"
"Bug Tracker" = "https://github.com/a-i-am/url2pdf/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/url2pdf"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -v"

[tool.coverage.run]
source = ["src/url2pdf"]
